# CMake_Examples

./: README.md
hello/: hello.c
hello+2/: hello.c
hello+4/inc1/: hello.h
hello+4/src1/: main.c
hello-1/: CMakeLists.txt  hello.c
hello-2/: CMakeLists.txt
hello-3/: CMakeLists.txt  hello-main.c  hello-print.c
hello-4/: CMakeLists.txt
hello-4/src2/: bye-print.c
hello-win32/: CMakeLists.txt
hello-win32/inc2/: bye.h
hello-win32/src1/: main.c
project/: CMakeLists.txt  clean.sh  make.sh
project+/: CMakeLists.txt
project+/apps/: CMakeLists.txt
project+/apps/taco/: CMakeLists.txt
project+/apps/york/: CMakeLists.txt
project+/ulibs/jack/src/: jack.c
project+2/: CMakeLists.txt  clean.sh
project+2/apps/: CMakeLists.txt
project+2/apps/taco/: CMakeLists.txt
project+2/apps/taco/inc/: taco.h
project+2/apps/taco/src/: taco.c
project+2/apps/york/: CMakeLists.txt  york-plus.c
project+2/rules/: variables.cmake
project+3/apps/taco/: CMakeLists.txt
project+3/modules/: CMakeLists.txt
project+3/modules/york/: CMakeLists.txt
project+3/rules/: functions.cmake  gcc.cmake  variables.cmake
project+3/ulibs/felicia/: CMakeLists.txt
project+4/apps/: CMakeLists.txt
project+4/apps/taco/src/: aisatsu.c
project+4/modules/york/src/: aisatsu.c  york-main.c
project+4/rules/: functions.cmake
project-1/: CMakeLists.txt
project-1/felicia/: CMakeLists.txt
project-1/felicia/inc/: felicia.h
project-1/jack/: CMakeLists.txt
project-1/taco/: CMakeLists.txt
project-1/york/: CMakeLists.txt
project-2/: CMakeLists.txt  clean.sh
project-2/apps/taco/: CMakeLists.txt
project-2/apps/york/: CMakeLists.txt
project-2/apps/york/inc/: york.h
project-3/apps/taco/: CMakeLists.txt
project-3/apps/york/: CMakeLists.txt
project-3/apps/york/src/: aisatsu.c  york-main.c
project-3/rules/: macros.cmake  variables.cmake
project-3/ulibs/felicia/son/: felicia.c
project-4/rules/: variables.cmake
project-4/ulibs/: CMakeLists.txt
project-4/ulibs/jack/: CMakeLists.txt
project-5/: CMakeLists.txt  make.sh
project-5/apps/taco/: CMakeLists.txt
project-5/modules/york/: CMakeLists.txt
project-5/modules/york/inc/: york.h
project-5/ulibs/jack/wife/teacher/: jack.h
project/taco/: CMakeLists.txt
project/taco/inc/: taco.h
project/taco/src/: taco.c
project/york/: CMakeLists.txt
project/york/src/: york.c
